nothing was chnaged

--- a/javaScriptProjects/game.html
+++ b/javaScriptProjects/game.html
@@ -12,6 +12,16 @@
   <button id="tails" class="tails">Tails</button>
   <button id="reset" class="reset">Reset</button>
 
+  <p class="js-guess"></p>
+  <p class="js-result"></p>
+
+  <p class="js-winpoints">
+    Wins : 0
+  </p>
+  <p class="js-losepoints">
+    Losses : 0
+  </p>
+
   <script src="game.js"></script>
 </body>
 </html>
