--- a/day 1/series.html
+++ b/day 1/series.html
@@ -20,14 +20,14 @@
         <ul>
           <li><a href="index.html">home</a></li>
           <li><a href="movies.html">movies</a></li>
-          <li><a href="series.html" class="active">series</a></li>
+          <li><a href="series.html" class="active">tv-series</a></li>
           <li><a href="anime.html">anime</a></li>
           <li><a href="#">about-us</a></li>
         </ul>
       </div>
 
       <div class="search">
-        <input type="search" id="" placeholder="search">
+        <input type="search" id="" placeholder="search tv-series">
         <button><i class="fa fa-search" aria-hidden="true"></i></button>
       </div>
 
@@ -35,8 +35,8 @@
 
     <section class="content">
 
-      <div class="series">
-        <h2>Series <i class="fa fa-film" aria-hidden="true"></i></h2>
+      <div class="series tv-series">
+        <h2>TV-Series <i class="fa fa-film" aria-hidden="true"></i></h2>
         <hr>
 
         <div class="series-list js-series-list">
