--- a/day 1/anime.html
+++ b/day 1/anime.html
@@ -20,14 +20,14 @@
         <ul>
           <li><a href="index.html">home</a></li>
           <li><a href="movies.html">movies</a></li>
-          <li><a href="series.html">series</a></li>
+          <li><a href="series.html">tv-series</a></li>
           <li><a href="anime.html" class="active">anime</a></li>
           <li><a href="#">about-us</a></li>
         </ul>
       </div>
 
       <div class="search">
-        <input type="search" id="" placeholder="search">
+        <input type="search" id="" placeholder="search anime">
         <button><i class="fa fa-search" aria-hidden="true"></i></button>
       </div>
 
@@ -35,45 +35,11 @@
 
     <section class="content">
 
-      <div class="anime">
+      <div class="anime ani">
         <h2>Anime <i class="fa fa-film" aria-hidden="true"></i></h2>
         <hr>
 
-        <div class="anime-list">
-          <div class="animes">
-            <img src="images/anime/ani1.jpg" alt="">
-            <p><strong>Demon Slayer</strong></p>
-          </div>
-
-          <div class="animes">
-            <img src="images/anime/ani2.jpg" alt="">
-            <p><strong>Solo Leveling</strong></p>
-          </div>
-
-          <div class="animes">
-            <img src="images/anime/ani3.jpg" alt="">
-            <p><strong>Jujutsu Kaisen</strong></p>
-          </div>
-
-          <div class="animes">
-            <img src="images/anime/ani4.jpg" alt="">
-            <p><strong>Blue Lock</strong></p>
-          </div>
-
-          <div class="animes">
-            <img src="images/anime/ani5.jpg" alt="">
-            <p><strong>Black Clover</strong></p>
-          </div>
-
-          <div class="animes">
-            <img src="images/anime/ani6.jpg" alt="">
-            <p><strong>My Hero Academia</strong></p>
-          </div>
-
-          <div class="animes">
-            <img src="images/anime/ani7.jpg" alt="">
-            <p><strong>Tokyo Revenge</strong></p>
-          </div>
+        <div class="anime-list js-anime-list">
         </div>
       </div>
 
@@ -91,5 +57,7 @@
     </section>
 
   </div>
+
+  <script src="anime.js"></script>
 </body>
 </html>
