--- a/day 1/movies.html
+++ b/day 1/movies.html
@@ -20,7 +20,7 @@
         <ul>
           <li><a href="index.html">home</a></li>
           <li><a href="movies.html" class="active">movies</a></li>
-          <li><a href="series.html">series</a></li>
+          <li><a href="series.html">tv-series</a></li>
           <li><a href="anime.html">anime</a></li>
           <li><a href="#">about-us</a></li>
         </ul>
