updating others movie description

--- a/day 1/index.html
+++ b/day 1/index.html
@@ -41,7 +41,7 @@
 
       <div class="info">
         <p>Explore a vast collection of movies, series and anime all in one place.</p>
-        <p>Discover new movies, binge-watch / Download your favourite series, and stay updated with the latest anime here on <span>M <i class="fa fa-video-camera" aria-hidden="true"></i> vies.</span></p>
+        <p>Discover new movies, binge-watch / Download your favourite series, and stay updated with the latest anime here on <br> <span>M <i class="fa fa-video-camera" aria-hidden="true"></i> vies.</span></p>
       </div>
 
       <div id="search">
