--- a/day 1/information-page.html
+++ b/day 1/information-page.html
@@ -32,70 +32,8 @@
 
     </section>
 
-    <section class="info">
-      <div class="movie-info">
-        <div class="movie-img">
-          <img src="images/movies/mov1.jpg" alt="">
-        </div>
-
-        <div class="movie-descript">
-          <h2>The Batman</h2>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis id error ipsam dolores possimus. Deserunt, voluptatem voluptatum rerum id fugiat temporibus eum esse accusamus explicabo ut enim cum ratione nobis!
-          </p>
-          <p><strong>Genre:</strong> Action | Crime | Drama </p>
-          <p><strong>Rotten Rating:</strong> 100%</p>
-          <p><strong>Directed by:</strong> Matt Reeves </p>
-          <p><strong>Starring:</strong> Robert Pattinson, Zoe Kravitz, Paul Dano... </p>
-          <p><strong>Runtime:</strong>02:56:15</p>
-          <p><strong>Audio:</strong> English </p>
-        </div>
-
-        <div class="download-movie">
-          <button type="button">Download MP4</button>
-          <button type="button">Download Subtitle</button>
-        </div>
-
-        <div class="recomended-movies">
-          <h2>Recomended Movies</h2>
-
-          <div class="rec-movies">
-            <div class="rec-movie-list">
-              <img src="images/movies/mov1.jpg" alt="">
-              <p>The Batman</p>
-            </div>
-
-            <div class="rec-movie-list">
-              <img src="images/movies/mov1.jpg" alt="">
-              <p>The Batman</p>
-            </div>
-
-            <div class="rec-movie-list">
-              <img src="images/movies/mov1.jpg" alt="">
-              <p>The Batman</p>
-            </div>
-
-            <div class="rec-movie-list">
-              <img src="images/movies/mov1.jpg" alt="">
-              <p>The Batman</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="trailer-and-comment">
-        <div class="movie-trailer">
-          <iframe width="100%" height="315" src="https://www.youtube.com/embed/mqqft2x_Aa4?si=uk1cER9l-_JR5qhx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-
-        <div class="comment">
-          <h3>Comments</h3>
-          <p>Name</p>
-          <input type="text" placeholder="Enter your name...">
-          <textarea name="text" id="" placeholder="Drop your comments here..."></textarea>
-          <button type="submit">Add</button>
-        </div>
-      </div>
+    <section class="inform js-inform-page">
+      
     </section>
 
     <section class="news">
@@ -109,5 +47,7 @@
       </div>
     </section>
   </div>
+
+  <script src="info-page.js"></script>
 </body>
 </html>
