added more infomations and also made it responsive

--- a/day 1/anime.html
+++ b/day 1/anime.html
@@ -16,8 +16,11 @@
         <a href="index.html"><h1>M <i class="fa fa-video-camera" aria-hidden="true"></i> vies</h1></a>
       </div>
 
-      <div class="options">
-        <ul>
+      <i class="fa fa-outdent" id="js-menu-open" aria-hidden="true"></i>
+
+      <div>
+        <ul class="navbar">
+          <i class="fa fa-times" id="js-menu-close" aria-hidden="true"></i>
           <li><a href="index.html">home</a></li>
           <li><a href="movies.html">movies</a></li>
           <li><a href="series.html">tv-series</a></li>
@@ -31,6 +34,13 @@
         <button><i class="fa fa-search" aria-hidden="true"></i></button>
       </div>
 
+    </section>
+
+    <section class="hero">
+      <div id="search">
+        <input type="search" placeholder="search for anime...">
+        <button><i class="fa fa-search" aria-hidden="true"></i></button>
+      </div>
     </section>
 
     <section class="content">
