--- a/day 1/information-page.html
+++ b/day 1/information-page.html
@@ -15,8 +15,11 @@
         <a href="index.html"><h1>M <i class="fa fa-video-camera" aria-hidden="true"></i> vies</h1></a>
       </div>
 
-      <div class="options">
-        <ul>
+      <i class="fa fa-outdent" id="js-menu-open" aria-hidden="true"></i>
+
+      <div>
+        <ul class="navbar">
+          <i class="fa fa-times" id="js-menu-close" aria-hidden="true"></i>
           <li><a href="index.html">home</a></li>
           <li><a href="movies.html" class="active">movies</a></li>
           <li><a href="series.html">tv-series</a></li>
